Home page rough layout

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -5,15 +5,39 @@ body,
 	margin: 0;
 }
 
-/* =========================================== */
+.centre {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+/* global end
+============================================================== */
+
 /* Headings start */
+h2 {
+	margin-bottom: 2rem;
+}
 
-/* Heading end */
+/* Heading end 
+============================================================== */
 
-/* =========================================== */
+/* Buttons */
+
+#tellmemore {
+	border-radius: 46px;
+}
+
+/* Buttons
+============================================================== */
+
 /* Navbar start*/
-
-/* Navbar end*/
+nav {
+	height: 5rem;
+	background-color: black;
+}
+/* Navbar end
+============================================================== */
 
 /* Hero/Header */
 .hero {
@@ -28,18 +52,49 @@ body,
 	background-repeat: no-repeat;
 	background-size: cover;
 }
-/* Hero/Header  end*/
+/* Hero/Header  end
+============================================================== */
 
 /* Course Card */
-.courses {
+.courses,
+.prequesites {
+	padding-left: 10%;
+	padding-top: 5rem;
+	text-align: center;
+}
+/* Course Card end 
+============================================================== */
+
+/* Prerequisites */
+.prequesite {
+	padding-top: 1rem;
+}
+/* Prereq end
+============================================================== */
+
+/* Get started */
+.get-started {
+	margin-top: 5rem;
+	height: 50vh;
+	width: 100vw;
+	background-color: #eeeeee;
+}
+/* Get Started end 
+============================================================== */
+
+/* Footer */
+footer {
 	padding-left: 10%;
 	padding-top: 5rem;
 }
-/* Course Card end */
+footer > img {
+	width: 24px;
+	height: 24px;
+}
+/* Footer end
+============================================================== */
 
-/* Prerequisites */
-.prequesites {}
-
+/* =========================================================== */
 /* Media queries */
 
 /* Small devices (landscape phones, 576px and up) */
@@ -53,7 +108,7 @@ body,
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
 	.hero {
-		padding-left: 7em;
+		padding-left: 10em;
 	}
 }
 
