Setting up less files

--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -3,3 +3,6 @@
 @import 'typography.less';
 @import 'navbar.less';
 @import 'components.less';
+
+// to activate less watch compiler use the folloeing command to terminal before adding to .less files:
+// less-watch-compiler styles/less styles/css main.less
