--- a/styles/less/layout.less
+++ b/styles/less/layout.less
@@ -30,15 +30,19 @@ body,
 	text-align: center;
 }
 
-.prequesite {
+.prequesite, .prequesite > p {
 	padding-top: 1rem;
 }
 
 .get-started {
 	margin-top: 5rem;
 	height: 50vh;
-	width: 100vw;
 	background-color: #eeeeee;
+}
+
+.get-started > .col-md-4 {
+	top:70%;
+	left: 12%;
 }
 
 footer {
