--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -26,14 +26,18 @@ body,
   padding-top: 5rem;
   text-align: center;
 }
-.prequesite {
+.prequesite,
+.prequesite > p {
   padding-top: 1rem;
 }
 .get-started {
   margin-top: 5rem;
   height: 50vh;
-  width: 100vw;
   background-color: #eeeeee;
+}
+.get-started > .col-md-4 {
+  top: 70%;
+  left: 12%;
 }
 footer {
   padding-left: 10%;
