--- a/styles/less/layout.less
+++ b/styles/less/layout.less
@@ -30,7 +30,8 @@ body,
 	text-align: center;
 }
 
-.prequesite, .prequesite > p {
+.prequesite,
+.prequesite > p {
 	padding-top: 1rem;
 }
 
@@ -41,8 +42,12 @@ body,
 }
 
 .get-started > .col-md-4 {
-	top:70%;
+	top: 70%;
 	left: 12%;
+}
+
+.signup {
+	margin: auto;
 }
 
 footer {
@@ -57,20 +62,21 @@ footer > img {
 // Media queries
 
 // Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) {
+@media (max-width: 576px) {
+	
 }
 
 // Medium devices (tablets, 768px and up)
-@media (min-width: 768px) {
+@media (max-width: 768px) {
 }
 
 // Large devices (desktops, 992px and up)
-@media (min-width: 992px) {
+@media (max-width: 992px) {
 	.hero {
 		padding-left: 10em;
 	}
 }
 
 // Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) {
+@media (max-width: 1200px) {
 }
