--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -1,8 +1,9 @@
+@import 'typography.less';
 @import 'layout.less';
 @import 'colours.less';
-@import 'typography.less';
 @import 'navbar.less';
 @import 'components.less';
+@import 'form.less';
 
 // to activate less watch compiler use the folloeing command to terminal before adding to .less files:
 // less-watch-compiler styles/less styles/css main.less
