--- a/styles/less/navbar.less
+++ b/styles/less/navbar.less
@@ -2,3 +2,15 @@ nav {
 	height: 5rem;
 	background-color: black;
 }
+
+img.logo {
+	width: 150px;
+	height: 49px;
+}
+
+@media (max-width: 576px) {
+	img.logo {
+		width: 147px;
+		height: 47px;
+	}
+}
