--- a/styles/less/components.less
+++ b/styles/less/components.less
@@ -1,9 +1,64 @@
 // Buttons
-#tellmemore {
-	border-radius: 46px;
+.btn-purple-primary {
+	background: @purple;
+	border-radius: 40px;
+	color: @white;
+	font-weight: bold;
+	text-transform: uppercase;
+	font-size: 16px;
+	line-height: 34px;
+	padding: 15px 20px;
 }
 
-.btn-see-course {
-	background: #8f34e2;
+.btn-gold-primary {
+	background: @white;
 	border-radius: 40px;
+	color: @gold;
+	font-size: 19px;
+	font-weight: bold;
+	padding: 15px 20px;
+	text-transform: uppercase;
+}
+
+.btn-green-primary {
+	background: @green;
+	border-radius: 40px;
+	color: @white;
+	text-transform: uppercase;
+}
+
+.btn-blue-primary {
+	background: @blue;
+    color: @white;
+    padding: 20px 30px;
+    width: 70%;
+}
+
+.btn-collapse {
+	background: @purple;
+	border-radius: 10px;
+	font-weight: 500;
+	font-size: 13px;
+	text-transform: uppercase;
+}
+
+// Cards
+.card {
+	padding: 1rem;
+
+	.card-title {
+		font-style: normal;
+		font-weight: bold;
+		font-size: 30px;
+		line-height: 42px;
+		color: @purple;
+	}
+	p {
+		font-style: normal;
+		font-weight: normal;
+		font-size: 22px;
+		line-height: 31px;
+		color: @grey;
+		text-align: left;
+	}
 }
