--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -15,6 +15,73 @@
 
 /* Navbar start*/
 
+nav {
+	height: 5rem;
+    background-color: black;
+    
+}
+.signup {
+    border:solid;
+    border-width: 1px;
+    border-right:;
+}
+
+.password {
+    padding-top: 20px;  
+}
+
+.column {
+    padding-left: 5px;
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+  }
+
+   /* Clear floats after image containers */
+   .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  .or
+{
+	display: block;
+	width: 100%;
+	height: 1px;
+	border-bottom: 1px solid #dee3e4;
+	position: relative;
+	margin: 20px 0;
+}
+
+.or:before
+{
+	content: 'or';
+	width: 40px;
+	height: 18px;
+	position: absolute;
+	top: -5px;
+	right: calc(50% - 20px);
+	background-color: #fff;
+	text-align: center;
+	line-height: 10px;
+	color: #555
+}
+.login-with-fb:hover,
+.login-with-google:hover,
+.login-with-indeed:hover
+.
+{
+	opacity: 1;
+}
+
+.footer {
+    margin-top: 10PX;
+}
+  
+ 
+
+
 /* Navbar end
 ============================================================== */
 
