--- a/styles/less/colours.less
+++ b/styles/less/colours.less
@@ -1,10 +1,12 @@
 @blue: #7295d9;
 @purple: #8f34e2;
 @grey: #4e4e4e;
+@grey2: #828181;
 @gold: #ffb93e;
 @green: #2da503;
 @white: #ffffff;
 @bg-blue: rgba(114, 149, 217, 0.1);
+@hover-active: darken(@blue, 80%);
 
 .blue {
 	color: @blue;
