--- a/styles/less/components.less
+++ b/styles/less/components.less
@@ -22,16 +22,18 @@
 
 .btn-green-primary {
 	background: @green;
-	border-radius: 40px;
 	color: @white;
+	font-size: 24px;
+	line-height: 34px;
 	text-transform: uppercase;
+	padding: 0.5em;
 }
 
 .btn-blue-primary {
 	background: @blue;
-    color: @white;
-    padding: 20px 30px;
-    width: 70%;
+	color: @white;
+	padding: 20px 30px;
+	width: 70%;
 }
 
 .btn-collapse {
@@ -41,6 +43,30 @@
 	font-size: 13px;
 	text-transform: uppercase;
 }
+
+.btn-primary-small {
+	background: @white;
+	border: 1px solid @blue;
+	box-sizing: border-box;
+	border-radius: 6px;
+
+	font-size: 22px;
+	line-height: 31px;
+	color: @blue;
+}
+
+.btn-primary-small-filled {
+	background: @blue;
+	border: 1px solid @blue;
+	box-sizing: border-box;
+	border-radius: 6px;
+
+	font-size: 19px;
+	line-height: 31px;
+	color: @white;
+}
+
+// Form fields
 
 // Cards
 .card {
