--- a/styles/less/navbar.less
+++ b/styles/less/navbar.less
@@ -1,12 +1,35 @@
 nav {
 	height: 5rem;
-	background-color: black;
+	background-color: @blue;
+	color: @blue;
+}
+
+.nav-item .nav-link li {
+	color: @blue;
+	.active a {
+		color: @hover-active;
+	}
 }
 
 img.logo {
 	width: 150px;
 	height: 49px;
 }
+
+// Course page
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+    color: #495057;
+    background-color: #fff;
+    border-color: @purple; 
+    border-bottom: 6px solid @purple;
+}
+
+.nav-tabs .nav-link {
+	border: 0px;
+    border-top-left-radius: .25rem;
+    border-top-right-radius: .25rem;
+}
+
 
 @media (max-width: 576px) {
 	img.logo {
