--- a/styles/less/typography.less
+++ b/styles/less/typography.less
@@ -25,7 +25,6 @@ html {
 	font-size: 45px;
 }
 
-
 h1 {
 	font-size: 60px;
 }
@@ -40,4 +39,22 @@ h3 {
 
 p {
 	font-size: 24px;
+}
+
+@media (max-width: 576px) {
+	h1 {
+		font-size: 40px;
+	}
+
+	h2 {
+		font-size: 30px;
+	}
+
+	h3 {
+		font-size: 20px;
+	}
+
+	p {
+		font-size: 17px;
+	}
 }
