--- a/styles/less/typography.less
+++ b/styles/less/typography.less
@@ -41,6 +41,16 @@ p {
 	font-size: 24px;
 }
 
+a.nav-link {
+	color: @blue !important;
+	font-size: 18px;
+	text-transform: uppercase;
+
+	.active {
+		color: @hover-active;
+	}
+}
+
 @media (max-width: 576px) {
 	h1 {
 		font-size: 40px;
