--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -73,6 +73,14 @@ h3 {
 p {
   font-size: 24px;
 }
+a.nav-link {
+  color: #7295d9 !important;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+a.nav-link .active {
+  color: #000000;
+}
 @media (max-width: 576px) {
   h1 {
     font-size: 40px;
@@ -155,7 +163,11 @@ body,
   padding-bottom: 4rem;
 }
 .course-content {
+  background-color: rgba(114, 149, 217, 0.1);
   padding: 2rem;
+}
+.tab-pane .list-group li {
+  background-color: rgba(114, 149, 217, 0.1);
 }
 footer {
   padding-left: 10%;
@@ -171,19 +183,19 @@ img.line {
   height: 38vh;
   width: 85%;
 }
-footer > img {
-  width: 24px;
-  height: 24px;
+footer img {
+  width: 165px;
+  height: 60px;
 }
 @media (max-width: 576px) {
   .hero {
     text-align: center;
+    padding-left: 0;
     width: 100vw;
-    height: 100vh;
+    height: 60vh;
     align-items: center;
     background-color: #7295d9;
     padding: 2rem;
-    padding-left: 0;
   }
   .hero img,
   .get-started img {
@@ -191,6 +203,21 @@ footer > img {
   }
   .get-started {
     padding-top: 1rem;
+  }
+  .course-header {
+    width: 100vw;
+    height: 70vh;
+    background-color: #7295d9;
+    padding: 1rem;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #ffffff;
+  }
+  .course-sub {
+    padding-bottom: 0;
+  }
+  .course-content {
+    padding: 1rem;
   }
 }
 .blue {
@@ -216,12 +243,6 @@ nav {
   background-color: #7295d9;
   color: #7295d9;
 }
-.nav-item .nav-link li {
-  color: #7295d9;
-}
-.nav-item .nav-link li .active a {
-  color: #000000;
-}
 img.logo {
   width: 150px;
   height: 49px;
@@ -229,9 +250,18 @@ img.logo {
 .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link.active {
   color: #495057;
-  background-color: #fff;
+  background-color: rgba(114, 149, 217, 0.1);
   border-color: #8f34e2;
   border-bottom: 6px solid #8f34e2;
+  font-weight: bold;
+}
+.course-content .nav-tabs {
+  overflow-x: auto;
+  overflow-y: hidden;
+  flex-wrap: nowrap;
+}
+.course-content .nav-tabs .nav-link {
+  white-space: nowrap;
 }
 .nav-tabs .nav-link {
   border: 0px;
@@ -266,10 +296,10 @@ img.logo {
 .btn-green-primary {
   background: #2da503;
   color: #ffffff;
-  font-size: 24px;
+  font-size: 20px;
   line-height: 34px;
   text-transform: uppercase;
-  padding: 0.5em;
+  padding: 1rem;
 }
 .btn-blue-primary {
   background: #7295d9;
@@ -308,17 +338,25 @@ img.logo {
 .card .card-title {
   font-style: normal;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 25px;
   line-height: 42px;
   color: #8f34e2;
 }
 .card p {
   font-style: normal;
   font-weight: normal;
-  font-size: 22px;
-  line-height: 31px;
+  font-size: 19px;
+  line-height: 25px;
   color: #4e4e4e;
   text-align: left;
+}
+@media (max-width: 576px) {
+  .btn-purple-primary {
+    width: 100%;
+  }
+  .btn-blue-primary {
+    width: 90%;
+  }
 }
 form > form-group > input {
   height: 50px !important;
