--- a/styles/less/components.less
+++ b/styles/less/components.less
@@ -23,10 +23,10 @@
 .btn-green-primary {
 	background: @green;
 	color: @white;
-	font-size: 24px;
+	font-size: 20px;
 	line-height: 34px;
 	text-transform: uppercase;
-	padding: 0.5em;
+	padding: 1rem;
 }
 
 .btn-blue-primary {
@@ -49,7 +49,6 @@
 	border: 1px solid @blue;
 	box-sizing: border-box;
 	border-radius: 6px;
-
 	font-size: 22px;
 	line-height: 31px;
 	color: @blue;
@@ -75,16 +74,26 @@
 	.card-title {
 		font-style: normal;
 		font-weight: bold;
-		font-size: 30px;
+		font-size: 25px;
 		line-height: 42px;
 		color: @purple;
 	}
 	p {
 		font-style: normal;
 		font-weight: normal;
-		font-size: 22px;
-		line-height: 31px;
+		font-size: 19px;
+		line-height: 25px;
 		color: @grey;
 		text-align: left;
+	}
+}
+
+@media (max-width: 576px) {
+	.btn-purple-primary {
+		width: 100%;
+	}
+
+	.btn-blue-primary {
+		width: 90%;
 	}
 }
