--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -192,7 +192,6 @@ footer img {
     text-align: center;
     padding-left: 0;
     width: 100vw;
-    height: 60vh;
     align-items: center;
     background-color: #7295d9;
     padding: 2rem;
@@ -238,10 +237,11 @@ footer img {
 .white {
   color: #ffffff;
 }
-nav {
-  height: 5rem;
-  background-color: #7295d9;
+.nav-item .nav-link li {
   color: #7295d9;
+}
+.nav-item .nav-link li .active a {
+  color: #000000;
 }
 img.logo {
   width: 150px;
@@ -250,18 +250,9 @@ img.logo {
 .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link.active {
   color: #495057;
-  background-color: rgba(114, 149, 217, 0.1);
+  background-color: #fff;
   border-color: #8f34e2;
   border-bottom: 6px solid #8f34e2;
-  font-weight: bold;
-}
-.course-content .nav-tabs {
-  overflow-x: auto;
-  overflow-y: hidden;
-  flex-wrap: nowrap;
-}
-.course-content .nav-tabs .nav-link {
-  white-space: nowrap;
 }
 .nav-tabs .nav-link {
   border: 0px;
