--- a/styles/less/navbar.less
+++ b/styles/less/navbar.less
@@ -1,36 +1,23 @@
-nav {
-	height: 5rem;
-	background-color: @blue;
+.nav-item .nav-link li {
 	color: @blue;
+	.active a {
+		color: @hover-active;
+	}
 }
-
-
 
 img.logo {
 	width: 150px;
 	height: 49px;
 }
 
-// Course page tabs
+// Course page
 .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link.active {
 	color: #495057;
-	background-color: @bg-blue;
+	background-color: #fff;
 	border-color: @purple;
 	border-bottom: 6px solid @purple;
-	font-weight: bold;
 }
-
-.course-content .nav-tabs {
-	overflow-x: auto;
-	overflow-y: hidden;
-	flex-wrap: nowrap;
-
-	.nav-link {
-		white-space: nowrap;
-	}
-}
-
 
 .nav-tabs .nav-link {
 	border: 0px;
