--- a/styles/less/form.less
+++ b/styles/less/form.less
@@ -1,3 +1,132 @@
 form > form-group > input {
     height: 50px !important;
 }
+
+.signup {
+    padding-top: 40px;
+}
+.logo {
+    padding-bottom: 20px;
+
+}
+
+.form-body {
+    padding-top: 30px;
+
+}
+.signup-form{
+    padding-top: 0px;
+}
+
+.password {
+    padding-top: 20px;  
+}
+
+.column {
+    padding-left: 5px;
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+  }
+
+   /* Clear floats after image containers */
+   .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  .or
+{
+	display: block;
+	width: 100%;
+	height: 1px;
+	border-bottom: 1px solid #dee3e4;
+	position: relative;
+	margin: 20px 0;
+}
+
+.or:before
+{
+	content: 'or';
+	width: 40px;
+	height: 18px;
+	position: absolute;
+	top: -5px;
+	right: calc(50% - 20px);
+	background-color: #fff;
+	text-align: center;
+	line-height: 10px;
+	color: #555
+}
+.login-with-fb:hover,
+.login-with-google:hover,
+.login-with-indeed:hover
+
+{
+	opacity: 1;
+}
+
+.footer {
+    margin-top: 10PX;
+}
+
+.button {
+    background-color: #7295D9;
+    border-color: #7295D9;
+}
+
+.button:hover {
+    background-color: #9B51E0;
+    border-color:  #9B51E0;
+}
+
+.btn-outline-dark {
+    color: white;
+    
+}
+
+.btn-login{
+    background-color: white;
+    color: #4E4E4E;
+    border-color: #4E4E4E;
+}
+.btn-login:hover {
+    background-color: white;
+    border-color:  white;
+    color: #4E4E4E;
+}
+
+.btn-signup{
+    background-color:#7295D9;
+    border-color: #7295D9;
+    color: white;
+}
+.btn-signup:hover {
+     background-color: #9B51E0;
+    border-color:  #9B51E0;
+}  
+
+
+.btn-login2 {
+    background-color:#7295D9;
+    border-color: #7295D9;
+    color: white;
+}
+.btn-login2:hover {
+    background-color: #9B51E0;
+   border-color:  #9B51E0;
+}  
+
+
+.btn-signup2{
+    background-color: white;
+    color: #4E4E4E;
+    border-color: #4E4E4E;
+}  
+
+.btn-signup2:hover {
+    background-color: white;
+    border-color:  white;
+    color: #4E4E4E;
+}
