--- a/styles/less/layout.less
+++ b/styles/less/layout.less
@@ -2,7 +2,10 @@ body,
 .container-fluid {
 	padding: 0;
 	margin: 0;
+	width: 100%;
 }
+
+
 
 .centre {
 	display: flex;
@@ -18,11 +21,20 @@ body,
 	justify-content: center;
 	align-items: center;
 	background-color: @blue;
-	padding: 2rem;
+	padding: 2em;
 	padding-left: 6em;
 	background-repeat: no-repeat;
 	background-size: cover;
 	color: @white;
+}
+
+.middle-row {
+
+	display: flex; 
+	flex-wrap: wrap;
+	margin-right: 20px;
+    margin-left: 20px;
+
 }
 
 .row-title {
@@ -31,7 +43,7 @@ body,
 
 .courses,
 .prerequesites {
-	padding: 0 4rem;
+	padding: 0 0rem;
 	padding-top: 5rem;
 	text-align: center;
 }
@@ -116,8 +128,8 @@ footer > img {
 		height: 100vh;
 		align-items: center;
 		background-color: @blue;
-		padding: 2rem;
-		padding-left: 0;
+		padding-top: 5rem;
+		padding-left: 3rem;
 	}
 
 	.hero img,
@@ -131,7 +143,8 @@ footer > img {
 }
 
 // Medium devices (tablets, 768px and up)
-@media (max-width: 768px) {
+@media (max-width: 768px) { 
+
 }
 
 // Large devices (desktops, 992px and up)
