--- a/styles/less/navbar.less
+++ b/styles/less/navbar.less
@@ -1,8 +1,20 @@
 nav {
-	height: 5rem;
+	
 	background-color: @blue;
 	color: @blue;
 }
+
+
+.fixed {
+	position: sticky;
+	z-index:1;
+	
+  }
+
+  .navstyle{
+	  background: #f8f9fa;
+	  width: auto;
+  }
 
 .nav-item .nav-link li {
 	color: @blue;
