--- a/styles/less/layout.less
+++ b/styles/less/layout.less
@@ -115,19 +115,36 @@ footer img {
 
 // Small devices (landscape phones, 576px and up)
 @media (max-width: 576px) {
+	.row {
+		margin-right: 0;
+		margin-left: 0;
+	}
+
 	.hero {
 		text-align: center;
 		padding-left: 0;
 		width: 100vw;
-		
+
 		align-items: center;
 		background-color: @blue;
 		padding: 2rem;
 	}
 
+	.hero p {
+		font-size: 16px;
+		line-height: 22px;
+	}
+
 	.hero img,
 	.get-started img {
 		display: none;
+	}
+
+	.courses,
+	.prerequesites {
+		padding: 0 1rem;
+		padding-top: 3rem;
+		text-align: center;
 	}
 
 	.get-started {
