Added course-start.html page

--- a/styles/less/layout.less
+++ b/styles/less/layout.less
@@ -86,6 +86,17 @@ body,
 	background-color: @bg-blue;
 }
 
+.signed-in {
+	display: flex;
+	flex-direction: row;
+}
+
+#avatar {
+	height: 45px;
+	width: 37px;
+	margin: 1rem;
+}
+
 footer {
 	padding-left: 10%;
 	padding-top: 5rem;
@@ -136,7 +147,8 @@ footer img {
 	}
 
 	.hero img,
-	.get-started img {
+	.get-started img,
+	#purple-line {
 		display: none;
 	}
 
