--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -169,6 +169,15 @@ body,
 .tab-pane .list-group li {
   background-color: rgba(114, 149, 217, 0.1);
 }
+.signed-in {
+  display: flex;
+  flex-direction: row;
+}
+#avatar {
+  height: 45px;
+  width: 37px;
+  margin: 1rem;
+}
 footer {
   padding-left: 10%;
   padding-top: 5rem;
@@ -205,7 +214,8 @@ footer img {
     line-height: 22px;
   }
   .hero img,
-  .get-started img {
+  .get-started img,
+  #purple-line {
     display: none;
   }
   .courses,
