--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -176,15 +176,6 @@ body,
 .tab-pane .list-group li {
   background-color: rgba(114, 149, 217, 0.1);
 }
-.signed-in {
-  display: flex;
-  flex-direction: row;
-}
-#avatar {
-  height: 45px;
-  width: 37px;
-  margin: 1rem;
-}
 footer {
   padding-left: 10%;
   padding-top: 5rem;
@@ -204,10 +195,6 @@ footer img {
   height: 60px;
 }
 @media (max-width: 576px) {
-  .row {
-    margin-right: 0;
-    margin-left: 0;
-  }
   .hero {
     text-align: center;
     padding-left: 0;
@@ -220,20 +207,9 @@ footer img {
    padding: 2rem;
 
   }
-  .hero p {
-    font-size: 16px;
-    line-height: 22px;
-  }
   .hero img,
-  .get-started img,
-  #purple-line {
+  .get-started img {
     display: none;
-  }
-  .courses,
-  .prerequesites {
-    padding: 0 1rem;
-    padding-top: 3rem;
-    text-align: center;
   }
   .get-started {
     padding-top: 1rem;
