--- a/styless/css/main.css
+++ b/styless/css/main.css
@@ -73,6 +73,14 @@ h3 {
 p {
   font-size: 24px;
 }
+a.nav-link {
+  color: #7295d9 !important;
+  font-size: 18px;
+  text-transform: uppercase;
+}
+a.nav-link .active {
+  color: #000000;
+}
 @media (max-width: 576px) {
   h1 {
     font-size: 40px;
@@ -162,7 +170,11 @@ body,
   padding-bottom: 4rem;
 }
 .course-content {
+  background-color: rgba(114, 149, 217, 0.1);
   padding: 2rem;
+}
+.tab-pane .list-group li {
+  background-color: rgba(114, 149, 217, 0.1);
 }
 footer {
   padding-left: 10%;
@@ -178,20 +190,20 @@ img.line {
   height: 38vh;
   width: 85%;
 }
-footer > img {
-  width: 24px;
-  height: 24px;
+footer img {
+  width: 165px;
+  height: 60px;
 }
 @media (max-width: 576px) {
   .hero {
     text-align: center;
     padding-left: 0;
     width: 100vw;
-    height: 100vh;
     align-items: center;
     background-color: #7295d9;
     padding-top: 5rem;
     padding-left: 3rem;
+    padding: 2rem;
   }
   .hero img,
   .get-started img {
@@ -199,6 +211,21 @@ footer > img {
   }
   .get-started {
     padding-top: 1rem;
+  }
+  .course-header {
+    width: 100vw;
+    height: 70vh;
+    background-color: #7295d9;
+    padding: 1rem;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #ffffff;
+  }
+  .course-sub {
+    padding-bottom: 0;
+  }
+  .course-content {
+    padding: 1rem;
   }
 }
 .blue {
@@ -218,10 +245,6 @@ footer > img {
 }
 .white {
   color: #ffffff;
-}
-nav {
-  background-color: #7295d9;
-  color: #7295d9;
 }
 .fixed {
   position: sticky;
@@ -281,10 +304,10 @@ img.logo {
 .btn-green-primary {
   background: #2da503;
   color: #ffffff;
-  font-size: 24px;
+  font-size: 20px;
   line-height: 34px;
   text-transform: uppercase;
-  padding: 0.5em;
+  padding: 1rem;
 }
 .btn-blue-primary {
   background: #7295d9;
@@ -323,17 +346,25 @@ img.logo {
 .card .card-title {
   font-style: normal;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 25px;
   line-height: 42px;
   color: #8f34e2;
 }
 .card p {
   font-style: normal;
   font-weight: normal;
-  font-size: 22px;
-  line-height: 31px;
+  font-size: 19px;
+  line-height: 25px;
   color: #4e4e4e;
   text-align: left;
+}
+@media (max-width: 576px) {
+  .btn-purple-primary {
+    width: 100%;
+  }
+  .btn-blue-primary {
+    width: 90%;
+  }
 }
 form > form-group > input {
   height: 50px !important;
