--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -94,6 +94,13 @@ a.nav-link .active {
   p {
     font-size: 17px;
   }
+  .hero h1 {
+    font-size: 32px;
+  }
+  .hero p {
+    font-size: 16px;
+    line-height: 34px;
+  }
 }
 body,
 .container-fluid {
@@ -195,14 +202,16 @@ footer img {
   height: 60px;
 }
 @media (max-width: 576px) {
+  .row {
+    padding-right: 0;
+    padding-left: 0;
+  }
   .hero {
     text-align: center;
     padding-left: 0;
     width: 100vw;
     align-items: center;
     background-color: #7295d9;
-    padding-top: 5rem;
-    padding-left: 3rem;
     padding: 2rem;
   }
   .hero img,
@@ -245,17 +254,6 @@ footer img {
 }
 .white {
   color: #ffffff;
-}
-
-
-nav {
-  background-color: #7295d9;
-  color: #7295d9;
-}
-
-.fixed {
-  position: sticky;
-  z-index: 1;
 }
 .nav-item .nav-link li {
   color: #7295d9;
@@ -375,9 +373,6 @@ form > form-group > input {
 .signup {
   padding-top: 40px;
 }
-.logo {
-  padding-bottom: 20px;
-}
 .form-body {
   padding-top: 30px;
 }
@@ -395,7 +390,7 @@ form > form-group > input {
 }
 /* Clear floats after image containers */
 .row::after {
-  content: "";
+  content: '';
   clear: both;
   display: table;
 }
@@ -425,54 +420,54 @@ form > form-group > input {
   opacity: 1;
 }
 .footer {
-  margin-top: 10PX;
+  margin-top: 10px;
 }
 .button {
-  background-color: #7295D9;
-  border-color: #7295D9;
+  background-color: #7295d9;
+  border-color: #7295d9;
 }
 .button:hover {
-  background-color: #9B51E0;
-  border-color: #9B51E0;
+  background-color: #9b51e0;
+  border-color: #9b51e0;
 }
 .btn-outline-dark {
   color: white;
 }
 .btn-login {
   background-color: white;
-  color: #4E4E4E;
-  border-color: #4E4E4E;
+  color: #4e4e4e;
+  border-color: #4e4e4e;
 }
 .btn-login:hover {
   background-color: white;
   border-color: white;
-  color: #4E4E4E;
+  color: #4e4e4e;
 }
 .btn-signup {
-  background-color: #7295D9;
-  border-color: #7295D9;
+  background-color: #7295d9;
+  border-color: #7295d9;
   color: white;
 }
 .btn-signup:hover {
-  background-color: #9B51E0;
-  border-color: #9B51E0;
+  background-color: #9b51e0;
+  border-color: #9b51e0;
 }
 .btn-login2 {
-  background-color: #7295D9;
-  border-color: #7295D9;
+  background-color: #7295d9;
+  border-color: #7295d9;
   color: white;
 }
 .btn-login2:hover {
-  background-color: #9B51E0;
-  border-color: #9B51E0;
+  background-color: #9b51e0;
+  border-color: #9b51e0;
 }
 .btn-signup2 {
   background-color: white;
-  color: #4E4E4E;
-  border-color: #4E4E4E;
+  color: #4e4e4e;
+  border-color: #4e4e4e;
 }
 .btn-signup2:hover {
   background-color: white;
   border-color: white;
-  color: #4E4E4E;
+  color: #4e4e4e;
 }
