--- a/styles/less/form.less
+++ b/styles/less/form.less
@@ -1,43 +1,37 @@
 form > form-group > input {
-    height: 50px !important;
+	height: 50px !important;
 }
 
 .signup {
-    padding-top: 40px;
-}
-.logo {
-    padding-bottom: 20px;
-
+	padding-top: 40px;
 }
 
 .form-body {
-    padding-top: 30px;
-
+	padding-top: 30px;
 }
-.signup-form{
-    padding-top: 0px;
+.signup-form {
+	padding-top: 0px;
 }
 
 .password {
-    padding-top: 20px;  
+	padding-top: 20px;
 }
 
 .column {
-    padding-left: 5px;
-    float: left;
-    width: 33.33%;
-    padding: 5px;
-  }
+	padding-left: 5px;
+	float: left;
+	width: 33.33%;
+	padding: 5px;
+}
 
-   /* Clear floats after image containers */
-   .row::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
+/* Clear floats after image containers */
+.row::after {
+	content: '';
+	clear: both;
+	display: table;
+}
 
-  .or
-{
+.or {
 	display: block;
 	width: 100%;
 	height: 1px;
@@ -46,8 +40,7 @@ form > form-group > input {
 	margin: 20px 0;
 }
 
-.or:before
-{
+.or:before {
 	content: 'or';
 	width: 40px;
 	height: 18px;
@@ -57,76 +50,71 @@ form > form-group > input {
 	background-color: #fff;
 	text-align: center;
 	line-height: 10px;
-	color: #555
+	color: #555;
 }
 .login-with-fb:hover,
 .login-with-google:hover,
-.login-with-indeed:hover
-
-{
+.login-with-indeed:hover {
 	opacity: 1;
 }
 
 .footer {
-    margin-top: 10PX;
+	margin-top: 10px;
 }
 
 .button {
-    background-color: #7295D9;
-    border-color: #7295D9;
+	background-color: #7295d9;
+	border-color: #7295d9;
 }
 
 .button:hover {
-    background-color: #9B51E0;
-    border-color:  #9B51E0;
+	background-color: #9b51e0;
+	border-color: #9b51e0;
 }
 
 .btn-outline-dark {
-    color: white;
-    
+	color: white;
 }
 
-.btn-login{
-    background-color: white;
-    color: #4E4E4E;
-    border-color: #4E4E4E;
+.btn-login {
+	background-color: white;
+	color: #4e4e4e;
+	border-color: #4e4e4e;
 }
 .btn-login:hover {
-    background-color: white;
-    border-color:  white;
-    color: #4E4E4E;
+	background-color: white;
+	border-color: white;
+	color: #4e4e4e;
 }
 
-.btn-signup{
-    background-color:#7295D9;
-    border-color: #7295D9;
-    color: white;
+.btn-signup {
+	background-color: #7295d9;
+	border-color: #7295d9;
+	color: white;
 }
 .btn-signup:hover {
-     background-color: #9B51E0;
-    border-color:  #9B51E0;
-}  
-
+	background-color: #9b51e0;
+	border-color: #9b51e0;
+}
 
 .btn-login2 {
-    background-color:#7295D9;
-    border-color: #7295D9;
-    color: white;
+	background-color: #7295d9;
+	border-color: #7295d9;
+	color: white;
 }
 .btn-login2:hover {
-    background-color: #9B51E0;
-   border-color:  #9B51E0;
-}  
+	background-color: #9b51e0;
+	border-color: #9b51e0;
+}
 
-
-.btn-signup2{
-    background-color: white;
-    color: #4E4E4E;
-    border-color: #4E4E4E;
-}  
+.btn-signup2 {
+	background-color: white;
+	color: #4e4e4e;
+	border-color: #4e4e4e;
+}
 
 .btn-signup2:hover {
-    background-color: white;
-    border-color:  white;
-    color: #4E4E4E;
+	background-color: white;
+	border-color: white;
+	color: #4e4e4e;
 }
