--- a/styles/less/typography.less
+++ b/styles/less/typography.less
@@ -67,4 +67,13 @@ a.nav-link {
 	p {
 		font-size: 17px;
 	}
+
+	.hero h1 {
+		font-size: 32px;
+	}
+
+	.hero p {
+		font-size: 16px;
+		line-height: 34px;
+	}
 }
