--- a/styles/less/typography.less
+++ b/styles/less/typography.less
@@ -10,6 +10,7 @@ html {
 	text-transform: uppercase;
 	font-weight: bold;
 	font-size: 45px;
+	color: @white;
 }
 
 .hero p {
@@ -38,7 +39,7 @@ h3 {
 }
 
 p {
-	font-size: 24px;
+	font-size: 20px;
 }
 
 a.nav-link {
@@ -65,7 +66,7 @@ a.nav-link {
 	}
 
 	p {
-		font-size: 17px;
+		font-size: 16px;
 	}
 
 	.hero h1 {
@@ -75,5 +76,6 @@ a.nav-link {
 	.hero p {
 		font-size: 16px;
 		line-height: 34px;
+		color: @white;
 	}
 }
