--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -49,6 +49,7 @@ html {
   text-transform: uppercase;
   font-weight: bold;
   font-size: 45px;
+  color: #ffffff;
 }
 .hero p {
   font-style: normal;
@@ -71,7 +72,7 @@ h3 {
   font-size: 30px;
 }
 p {
-  font-size: 24px;
+  font-size: 20px;
 }
 a.nav-link {
   color: #7295d9 !important;
@@ -92,7 +93,7 @@ a.nav-link .active {
     font-size: 20px;
   }
   p {
-    font-size: 17px;
+    font-size: 16px;
   }
   .hero h1 {
     font-size: 32px;
@@ -100,6 +101,7 @@ a.nav-link .active {
   .hero p {
     font-size: 16px;
     line-height: 34px;
+    color: #ffffff;
   }
 }
 body,
@@ -107,6 +109,10 @@ body,
   padding: 0;
   margin: 0;
   width: 100%;
+}
+.row {
+  margin-right: 0;
+  margin-left: 0;
 }
 .centre {
   display: flex;
@@ -145,9 +151,6 @@ body,
 .prerequesites p {
   padding-top: 1rem;
 }
-.prerequesites {
-  background-color: rgba(114, 149, 217, 0.1);
-}
 .get-started {
   padding-top: 4rem;
   height: 70vh;
@@ -172,9 +175,6 @@ body,
   background-repeat: no-repeat;
   background-size: cover;
   color: #ffffff;
-}
-.course-sub {
-  padding-bottom: 4rem;
 }
 .course-content {
   background-color: rgba(114, 149, 217, 0.1);
@@ -203,8 +203,13 @@ footer img {
 }
 @media (max-width: 576px) {
   .row {
-    padding-right: 0;
-    padding-left: 0;
+    margin-right: 0;
+    margin-left: 0;
+  }
+  .courses,
+  .prerequesites {
+    padding-top: 2rem;
+    text-align: center;
   }
   .hero {
     text-align: center;
@@ -215,7 +220,8 @@ footer img {
     padding: 2rem;
   }
   .hero img,
-  .get-started img {
+  .get-started img,
+  #purple-line {
     display: none;
   }
   .get-started {
@@ -235,6 +241,9 @@ footer img {
   }
   .course-content {
     padding: 1rem;
+  }
+  .prerequesites {
+    background-color: #ffffff;
   }
 }
 .blue {
@@ -267,15 +276,30 @@ img.logo {
 }
 .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link.active {
-  color: #495057;
+  color: #4e4e4e;
   background-color: #fff;
   border-color: #8f34e2;
   border-bottom: 6px solid #8f34e2;
 }
-.nav-tabs .nav-link {
-  border: 0px;
-  border-top-left-radius: 0.25rem;
-  border-top-right-radius: 0.25rem;
+.tabbable .nav-tabs {
+  overflow-x: auto;
+  overflow-y: hidden;
+  flex-wrap: nowrap;
+}
+.tabbable .nav-tabs .nav-link {
+  white-space: nowrap;
+}
+.signed-in {
+  display: flex;
+  flex-direction: row;
+}
+.signed-in p {
+  margin: auto 0;
+  padding-right: 10px;
+}
+.signed-in img {
+  width: 50px;
+  height: 50px;
 }
 @media (max-width: 576px) {
   img.logo {
