--- a/styles/less/form.less
+++ b/styles/less/form.less
@@ -47,7 +47,7 @@ form > form-group > input {
 	position: absolute;
 	top: -5px;
 	right: calc(50% - 20px);
-	background-color: #fff;
+	background-color: @white;
 	text-align: center;
 	line-height: 10px;
 	color: #555;
@@ -63,13 +63,13 @@ form > form-group > input {
 }
 
 .button {
-	background-color: #7295d9;
-	border-color: #7295d9;
+	background-color: @blue;
+	border-color: @blue;
 }
 
 .button:hover {
-	background-color: #9b51e0;
-	border-color: #9b51e0;
+	background-color: @purple;
+	border-color: @purple;
 }
 
 .btn-outline-dark {
@@ -78,43 +78,43 @@ form > form-group > input {
 
 .btn-login {
 	background-color: white;
-	color: #4e4e4e;
-	border-color: #4e4e4e;
+	color: @grey;
+	border-color: @grey;
 }
 .btn-login:hover {
 	background-color: white;
 	border-color: white;
-	color: #4e4e4e;
+	color: @grey;
 }
 
 .btn-signup {
-	background-color: #7295d9;
-	border-color: #7295d9;
+	background-color: @blue;
+	border-color: @blue;
 	color: white;
 }
 .btn-signup:hover {
-	background-color: #9b51e0;
-	border-color: #9b51e0;
+	background-color: @purple;
+	border-color: @purple;
 }
 
 .btn-login2 {
-	background-color: #7295d9;
-	border-color: #7295d9;
+	background-color: @blue;
+	border-color: @blue;
 	color: white;
 }
 .btn-login2:hover {
-	background-color: #9b51e0;
-	border-color: #9b51e0;
+	background-color: @purple;
+	border-color: @purple;
 }
 
 .btn-signup2 {
 	background-color: white;
-	color: #4e4e4e;
-	border-color: #4e4e4e;
+	color: @grey;
+	border-color: @grey;
 }
 
 .btn-signup2:hover {
 	background-color: white;
 	border-color: white;
-	color: #4e4e4e;
+	color: @grey;
 }
