--- a/styles/less/layout.less
+++ b/styles/less/layout.less
@@ -116,6 +116,12 @@ footer img {
 	height: 60px;
 }
 
+.signup img {
+	width: 180px;
+	height: auto;
+	margin-bottom: 2rem;
+}
+
 // Media queries
 
 // Small devices (landscape phones, 576px and up)
@@ -169,6 +175,10 @@ footer img {
 
 	.prerequesites {
 		background-color: @white;
+	}
+
+	.login-signup-switch {
+		display: none;
 	}
 }
 
