--- a/styles/less/components.less
+++ b/styles/less/components.less
@@ -96,4 +96,15 @@
 	.btn-blue-primary {
 		width: 90%;
 	}
+
+	.card {
+		.card-title {
+			font-size: 20px;
+			line-height: 25px;
+		}
+		p {
+			font-size: 16px;
+			line-height: 22px;
+		}
+	}
 }
