--- a/styles/less/form.less
+++ b/styles/less/form.less
@@ -65,6 +65,10 @@ form > form-group > input {
 .button {
 	background-color: @blue;
 	border-color: @blue;
+
+	a {
+		color: @white;
+	}
 }
 
 .button:hover {
