--- a/styles/less/layout.less
+++ b/styles/less/layout.less
@@ -9,7 +9,10 @@ body,
 	margin-right: 0;
 	margin-left: 0;
 }
-
+.col-12 {
+	padding-right: 0;
+	padding-left: 0;
+}
 .centre {
 	display: flex;
 	justify-content: center;
@@ -179,6 +182,15 @@ footer img {
 
 	.login-signup-switch {
 		display: none;
+	}
+
+	.signup img {
+		margin-bottom: 0;
+	}
+
+	.signup-padding {
+		padding-right: 15px;
+		padding-left: 15px;
 	}
 }
 
