--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -4,6 +4,7 @@
 @import 'navbar.less';
 @import 'components.less';
 @import 'form.less';
+@import 'quiz.less';
 
 // to activate less watch compiler use the folloeing command to terminal before adding to .less files:
 // less-watch-compiler styles/less styles/css main.less
