--- a/styless/css/main.css
+++ b/styless/css/main.css
@@ -49,6 +49,7 @@ html {
   text-transform: uppercase;
   font-weight: bold;
   font-size: 45px;
+  color: #ffffff;
 }
 .hero p {
   font-style: normal;
@@ -71,7 +72,7 @@ h3 {
   font-size: 30px;
 }
 p {
-  font-size: 24px;
+  font-size: 20px;
 }
 a.nav-link {
   color: #7295d9 !important;
@@ -92,7 +93,15 @@ a.nav-link .active {
     font-size: 20px;
   }
   p {
-    font-size: 17px;
+    font-size: 16px;
+  }
+  .hero h1 {
+    font-size: 32px;
+  }
+  .hero p {
+    font-size: 16px;
+    line-height: 34px;
+    color: #ffffff;
   }
 }
 body,
@@ -100,6 +109,14 @@ body,
   padding: 0;
   margin: 0;
   width: 100%;
+}
+.row {
+  margin-right: 0;
+  margin-left: 0;
+}
+.col-12 {
+  padding-right: 0;
+  padding-left: 0;
 }
 .centre {
   display: flex;
@@ -138,9 +155,6 @@ body,
 .prerequesites p {
   padding-top: 1rem;
 }
-.prerequesites {
-  background-color: rgba(114, 149, 217, 0.1);
-}
 .get-started {
   padding-top: 4rem;
   height: 70vh;
@@ -165,9 +179,6 @@ body,
   background-repeat: no-repeat;
   background-size: cover;
   color: #ffffff;
-}
-.course-sub {
-  padding-bottom: 4rem;
 }
 .course-content {
   background-color: rgba(114, 149, 217, 0.1);
@@ -194,19 +205,32 @@ footer img {
   width: 165px;
   height: 60px;
 }
+.signup img {
+  width: 180px;
+  height: auto;
+  margin-bottom: 2rem;
+}
 @media (max-width: 576px) {
+  .row {
+    margin-right: 0;
+    margin-left: 0;
+  }
+  .courses,
+  .prerequesites {
+    padding-top: 2rem;
+    text-align: center;
+  }
   .hero {
     text-align: center;
     padding-left: 0;
     width: 100vw;
     align-items: center;
     background-color: #7295d9;
-    padding-top: 5rem;
-    padding-left: 3rem;
     padding: 2rem;
   }
   .hero img,
-  .get-started img {
+  .get-started img,
+  #purple-line {
     display: none;
   }
   .get-started {
@@ -227,6 +251,19 @@ footer img {
   .course-content {
     padding: 1rem;
   }
+  .prerequesites {
+    background-color: #ffffff;
+  }
+  .login-signup-switch {
+    display: none;
+  }
+  .signup img {
+    margin-bottom: 0;
+  }
+  .signup-padding {
+    padding-right: 15px;
+    padding-left: 15px;
+  }
 }
 .blue {
   color: #7295d9;
@@ -246,10 +283,6 @@ footer img {
 .white {
   color: #ffffff;
 }
-.fixed {
-  position: sticky;
-  z-index: 1;
-}
 .nav-item .nav-link li {
   color: #7295d9;
 }
@@ -262,15 +295,30 @@ img.logo {
 }
 .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link.active {
-  color: #495057;
+  color: #4e4e4e;
   background-color: #fff;
   border-color: #8f34e2;
   border-bottom: 6px solid #8f34e2;
 }
-.nav-tabs .nav-link {
-  border: 0px;
-  border-top-left-radius: 0.25rem;
-  border-top-right-radius: 0.25rem;
+.tabbable .nav-tabs {
+  overflow-x: auto;
+  overflow-y: hidden;
+  flex-wrap: nowrap;
+}
+.tabbable .nav-tabs .nav-link {
+  white-space: nowrap;
+}
+.signed-in {
+  display: flex;
+  flex-direction: row;
+}
+.signed-in p {
+  margin: auto 0;
+  padding-right: 10px;
+}
+.signed-in img {
+  width: 50px;
+  height: 50px;
 }
 @media (max-width: 576px) {
   img.logo {
@@ -361,15 +409,20 @@ img.logo {
   .btn-blue-primary {
     width: 90%;
   }
+  .card .card-title {
+    font-size: 20px;
+    line-height: 25px;
+  }
+  .card p {
+    font-size: 16px;
+    line-height: 22px;
+  }
 }
 form > form-group > input {
   height: 50px !important;
 }
 .signup {
   padding-top: 40px;
-}
-.logo {
-  padding-bottom: 20px;
 }
 .form-body {
   padding-top: 30px;
@@ -388,7 +441,7 @@ form > form-group > input {
 }
 /* Clear floats after image containers */
 .row::after {
-  content: "";
+  content: '';
   clear: both;
   display: table;
 }
@@ -407,7 +460,7 @@ form > form-group > input {
   position: absolute;
   top: -5px;
   right: calc(50% - 20px);
-  background-color: #fff;
+  background-color: #ffffff;
   text-align: center;
   line-height: 10px;
   color: #555;
@@ -418,54 +471,57 @@ form > form-group > input {
   opacity: 1;
 }
 .footer {
-  margin-top: 10PX;
+  margin-top: 10px;
 }
 .button {
-  background-color: #7295D9;
-  border-color: #7295D9;
+  background-color: #7295d9;
+  border-color: #7295d9;
+}
+.button a {
+  color: #ffffff;
 }
 .button:hover {
-  background-color: #9B51E0;
-  border-color: #9B51E0;
+  background-color: #8f34e2;
+  border-color: #8f34e2;
 }
 .btn-outline-dark {
   color: white;
 }
 .btn-login {
   background-color: white;
-  color: #4E4E4E;
-  border-color: #4E4E4E;
+  color: #4e4e4e;
+  border-color: #4e4e4e;
 }
 .btn-login:hover {
   background-color: white;
   border-color: white;
-  color: #4E4E4E;
+  color: #4e4e4e;
 }
 .btn-signup {
-  background-color: #7295D9;
-  border-color: #7295D9;
+  background-color: #7295d9;
+  border-color: #7295d9;
   color: white;
 }
 .btn-signup:hover {
-  background-color: #9B51E0;
-  border-color: #9B51E0;
+  background-color: #8f34e2;
+  border-color: #8f34e2;
 }
 .btn-login2 {
-  background-color: #7295D9;
-  border-color: #7295D9;
+  background-color: #7295d9;
+  border-color: #7295d9;
   color: white;
 }
 .btn-login2:hover {
-  background-color: #9B51E0;
-  border-color: #9B51E0;
+  background-color: #8f34e2;
+  border-color: #8f34e2;
 }
 .btn-signup2 {
   background-color: white;
-  color: #4E4E4E;
-  border-color: #4E4E4E;
+  color: #4e4e4e;
+  border-color: #4e4e4e;
 }
 .btn-signup2:hover {
   background-color: white;
   border-color: white;
-  color: #4E4E4E;
+  color: #4e4e4e;
 }
